# iwe

./: .gitignore  CLAUDE.md  package-lock.json  package.json  spec.md  tsconfig.json  vite.config.ts
.claude/: settings.local.json
src-tauri/: .gitignore  Cargo.toml  generate_syllables.py  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: _emotions_ag.txt  _emotions_gn.txt  _emotions_oz.txt  _sensory.txt  _setting_dialogue.txt  analysis.rs  db.rs  epub.rs  epub_validate.rs  famous_books.rs  format.rs  images.rs  import.rs  lib.rs  palettes.rs  scanner.rs  semantic.rs  spellcheck.rs  syllable_data.rs  synonyms.rs  text_utils.rs  wordlists.rs  ydoc.rs
src-tauri/src/.claude/: settings.local.json
src/lib/: chartConfig.js  chartConstants.js  db.js  entityHighlight.js  export.js  fontList.js  marginDefaults.js  noteMarker.js  stateMarker.js  theme.css  timeBreak.js  toast.js  trimSizes.js  unitPreference.js  ydoc.js
src/lib/components/: AnalysisPanel.svelte  ChapterNav.svelte  ChapterSettingsModal.svelte  DecimalInput.svelte  Editor.svelte  EntityPanel.svelte  FontPicker.svelte  KanbanCardModal.svelte  MapPageEditor.svelte  NotesPanel.svelte  PageContentEditor.svelte  PalettePickerModal.svelte  SearchPanel.svelte  Toasts.svelte  TocPageEditor.svelte  WordModal.svelte  WordPalettes.svelte
src/lib/components/format/: BreaksSettings.svelte  ChapterHeadings.svelte  HeaderFooterSettings.svelte  HeadingsSettings.svelte  ParagraphSettings.svelte  PrintLayoutSettings.svelte  TrimSettings.svelte  TypographySettings.svelte
src/routes/: +layout.svelte  +page.svelte
src/routes/analyse/: +page.svelte
src/routes/chapters/: +page.svelte
src/routes/heatmap/: +page.svelte
src/routes/import/: +page.svelte
src/routes/pacing/: +page.svelte
src/routes/paragraphs/: +page.svelte
src/routes/print/: +page.svelte
src/routes/project/[filename]/: +layout.js  +layout.svelte  +page.svelte
src/routes/project/[filename]/book-settings/: +page.svelte
src/routes/project/[filename]/format/: +page.svelte
src/routes/project/[filename]/kanban/: +page.svelte
src/routes/project/[filename]/palettes/: +page.svelte
src/routes/project/[filename]/stats/: +page.svelte
src/routes/project/[filename]/timeflow/: +page.svelte
src/routes/readability/: +page.svelte
src/routes/stats/: +page.svelte
src/routes/timeflow/: +page.svelte
