[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = [] }
tauri-plugin-log = "2"
tauri-plugin-opener = "2.5.3"
tauri-plugin-dialog = "2.6.0"
tauri-plugin-fs = "2.4.5"
aho-corasick = "1.1.4"
rusqlite = { version = "0.39.0", features = ["bundled"] }
regex = "1.12.3"
genpdf = "0.2.0"
spellbook = "0.4.0"
yrs = "0.21"
phf = { version = "0.11", features = ["macros"] }
ort = { version = "2.0.0-rc.12", features = ["ndarray"], optional = true }
tokenizers = { version = "0.21", default-features = false, features = ["onig"], optional = true }
typst = { version = "0.14", optional = true }
typst-pdf = { version = "0.14", optional = true }
typst-svg = { version = "0.14", optional = true }
typst-kit = { version = "0.14", default-features = false, features = ["fonts", "packages"], optional = true }
zip = { version = "0.6", default-features = false, features = ["deflate"] }
quick-xml = "0.31"
epub-builder = "0.8"
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp", "gif"] }
base64 = "0.22.1"
sha2 = "0.10"

[features]
default = []
semantic = ["dep:ort", "dep:tokenizers"]
format = ["dep:typst", "dep:typst-pdf", "dep:typst-svg", "dep:typst-kit"]

# Optimize all dependencies even in dev mode. Our own code stays at opt-level=0
# (fast incremental builds), but pure-Rust deps like `image`, `typst`, `ort`,
# and `yrs` were 10-50× slower than release without this. Image downscale
# went from ~10s/image to ~200ms/image just by flipping this on.
[profile.dev.package."*"]
opt-level = 3
